--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=libs\\jakarta.servlet.jsp.jstl-3.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=libs\\mysql-connector-j-8.0.31.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,9 +40,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
