--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-!web/**
-!src/**
-/build/
-/dist/
-/nbproject/private/
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
