--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,9 @@ file.reference.jakarta.mail-2.0.1.jar=libs\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=libs\\mysql-connector-j-8.0.31.jar
+file.reference.quartz-2.3.0-SNAPSHOT.jar=libs\\quartz-2.3.0-SNAPSHOT.jar
+file.reference.quartz-jobs-2.3.0-SNAPSHOT.jar=libs\\quartz-jobs-2.3.0-SNAPSHOT.jar
+file.reference.slf4j-api-1.7.7.jar=libs\\slf4j-api-1.7.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,9 +48,11 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${libs.jpa20-persistence.classpath}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
-    ${file.reference.jakarta.mail-2.0.1.jar}
+    ${file.reference.jakarta.mail-2.0.1.jar}:\
+    ${file.reference.quartz-2.3.0-SNAPSHOT.jar}:\
+    ${file.reference.quartz-jobs-2.3.0-SNAPSHOT.jar}:\
+    ${file.reference.slf4j-api-1.7.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
