--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.c3p0-0.9.5.2.jar=D:\\Workspace\\java\\TT\\lib\\c3p0-0.9.5.2.jar
 file.reference.jakarta.activation-2.0.1.jar=libs\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=libs\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.quartz-2.3.0-SNAPSHOT.jar}:\
     ${file.reference.quartz-jobs-2.3.0-SNAPSHOT.jar}:\
-    ${file.reference.slf4j-api-1.7.7.jar}
+    ${file.reference.slf4j-api-1.7.7.jar}:\
+    ${file.reference.c3p0-0.9.5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
