--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-lang3-3.12.0.jar=libs\\commons-lang3-3.12.0.jar
+file.reference.commons-text-1.10.0.jar=libs\\commons-text-1.10.0.jar
 file.reference.gson-2.10.1.jar=libs\\gson-2.10.1.jar
 file.reference.jakarta.activation-2.0.1.jar=libs\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=libs\\jakarta.mail-2.0.1.jar
@@ -57,7 +59,9 @@ javac.classpath=\
     ${file.reference.quartz-2.3.0-SNAPSHOT.jar}:\
     ${file.reference.quartz-jobs-2.3.0-SNAPSHOT.jar}:\
     ${file.reference.slf4j-api-1.7.7.jar}:\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.commons-text-1.10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
