--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.jakarta.mail-2.0.1.jar=libs\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=libs\\mysql-connector-j-8.0.31.jar
+file.reference.poi-3.17.jar=C:\\Users\\Anh\\Downloads\\poi-3.17.jar
 file.reference.quartz-2.3.0-SNAPSHOT.jar=libs\\quartz-2.3.0-SNAPSHOT.jar
 file.reference.quartz-jobs-2.3.0-SNAPSHOT.jar=libs\\quartz-jobs-2.3.0-SNAPSHOT.jar
 file.reference.slf4j-api-1.7.7.jar=libs\\slf4j-api-1.7.7.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.7.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.commons-text-1.10.0.jar}
+    ${file.reference.commons-text-1.10.0.jar}:\
+    ${file.reference.poi-3.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
